---
source: spade-tests/src/typeinference.rs
---
fn test() -> uint<8> {
    -1
}


error: Output type mismatch. Expected uint<8>, got int<_>
  ┌─ testinput:1:22
  │  
1 │   fn test() -> uint<8> {
  │                ------- uint<8> type specified here
  │ ╭──────────────────────^
2 │ │     -1
  │ │     -- Type int<_> inferred here
3 │ │ }
  │ ╰─^ Found type int<_>
  │  
  = note: Expected: uint<8>
               Got: int<_>


